@@ -16,10 +16,15 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
 
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(19)
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
 }
